[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "komorebi"
version = "0.1.0"
description = "Steer hidden states, not weights. Depth-scheduled."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["komorebi*"]
